added Mingur's Videos

--- a/ytube/_data/lists/AI-keys.yml
+++ b/ytube/_data/lists/AI-keys.yml
@@ -1,7 +1,11 @@
 --- 
 - BrNs0M77Pd4 # Artificial Intelligence: it will kill us | Jay Tuck | TEDxHamburgSalon
 - Njbze8cS8WE # How Technology Will Take Your Job and Create God
+- 2s_hIs8s_N4 # Breathtaking Historical Portraits Brought To Life Using AI Technology
+- KZ7BnJb30Cc # When A.I. Becomes Creative
+- bC_DZlweviI # How To Build A Human with Gemma Chan | Artificial Intelligence | Spark
 - 01ofjPtBlk4 # In 5 Years Robots Will Take Your Job! What Then?
+- 5dZ_lvDgevk # In the Age of AI (full film) | FRONTLINE
 - vxI7i-ycyG8 # THIS WILL LITERALLY BLOW YOUR MIND! Bruce Lipton Shocked The Audience With This Story!
 - TFk_w_N2xXM # The Elephant in the Brain | Robin Hanson | TEDxAsburyPark
 - mQO2PcEW9BY # A.I. is Progressing Faster Than You Think!
