--- a/ytube/_data/lists/docum-keys.yml
+++ b/ytube/_data/lists/docum-keys.yml
@@ -23,4 +23,5 @@
 - 2Vv-BfVoq4g # Ed Sheeran - Perfect (Official Music Video)
 - 7-fe01CA3vc # Charlie Munger: The Psychology of Human Misjudgement
 - esPRsT-lmw8 # The most important lesson from 83,000 brain scans | Daniel Amen | TEDxOrangeCoast
+- 9vJRopau0g0 # The Super Mario Effect - Tricking Your Brain into Learning More | Mark Rober | TEDxPenn
 - QmZcDy1wZsskR5c9LBuq8J1Ze9SjmneV1LJGjQURh7BHpw
