--- a/ytube/_data/lists/economy-keys.yml
+++ b/ytube/_data/lists/economy-keys.yml
@@ -2,6 +2,7 @@
 - TA7zeaQXZwk # Heirship Economy an Introduction
 - i6ZcgumHtiM # Morning Keynote: "Financial Engineering and Its Discontents" by Dr. Emanuel Derman
 - DanOzH5LmZE # Professor Emanuel Derman: Models Behaving Badly
+- bgPDW0ZpgJU # Gold & Dollar: How Money Became Worthless | Currencies Explained | Documentary | Fiat Currency
 - AtjjMIeUJbU # Emanuel Derman: How is the mindset of a quant changing?
 - ed2FWNWwE3I # Quants - The Alchemists of Wall Street - VPRO documentary
 - cvC1bBdDyKE # Emanuel Derman, Head of Risk at Prisma Capital Partners - #PreMarket Prep for August 28, 2014
