--- a/ytube/_data/lists/entrepreneur-keys.yml
+++ b/ytube/_data/lists/entrepreneur-keys.yml
@@ -4,3 +4,5 @@
 - w82a1FT5o88 # How to Start a Speech
 - 8G3sE5erZLY # Kidpreneurs - Young Entrepreneurs with BIG ideas!
 - EW2xjH2Py2s # Entreprise libérée, le patron qui a changé son regard sur les autres | Alexandre Gérard | TEDxSaclay
+- kt7wh7HS8uc # Jim Kwik: "I will teach you skills that you'll have for the rest of your life"
+- CQbKctnnA-Y # Elon Musk 'I Don't Give A Damn About Your Degree
