--- a/ytube/_data/lists/gurus-keys.yml
+++ b/ytube/_data/lists/gurus-keys.yml
@@ -14,5 +14,6 @@
 - Tf8PUAG2aYU # OSHO: There Is No Tomorrow
 - AhOhgEeMAcg # Mahavatar Babaji - The Definitive Documentary of Babaji - An Immortal Master
 - Gw1I7fqmxmA # This Indian Mystic Drops KNOWLEDGE BOMBS (I’m Speechless!) | Sadhguru on Impact Theory
+- 2va3j-Ub3B0 # Meditate by Letting Your Mind Be As It Is – Yongey Mingyur Rinpoche
 
 
