--- a/ytube/_data/lists/medit-keys.yml
+++ b/ytube/_data/lists/medit-keys.yml
@@ -1,11 +1,16 @@
 --- 
+- YbIt_UISoD8 # Mindfulness Meditation - 30 minutes (Yongey Mingyur Rinpoche recording - edited)
+- 5GSeWdjyr1c # A Guided Meditation on the Body, Space, and Awareness with Yongey Mingyur Rinpoche
 - 0GuCDLdrvkA # Durgaashtakam - Peaceful Music For Protection, Healing, Relaxation and Meditation
 - XplRXNxPLEY # Alan Watts - Tap Into Your True Self | 432hz | Frequency Meditation
 - ausD8Z422as # Dhafer Youssef - Khira "Indicium Divinum" (Elegy for my mother)
 - 8sYK7lm3UKg # OM Chanting @417 Hz | Removes All Negative Blocks
 - 0sbRipuelcc # 
+- gbSeNYzYCiA # 6 Hour Powerful Tibetan Bowl Music: Chakra Healing, Meditation Music, Relaxation Music, ☯2076
+- VRpiRz7_EMM # 528Hz Energy CLEANSE Yourself & Your Home - Release Negative Energies Frequency
 - TAESZsLJdVw # Crystal Chakra Meditation with Antique Tibetan Singing Bowls
 - Nnztjp7rSlc # 🔴 Beautiful Piano Music: Relaxing Music, Study Music, Sleep Music, Meditation Music
+- ijfLsKg8jFY # Om 108 Times - Music for Yoga & Meditation
 - BxOw3Zy_GxA # 174 Hz || PAIN RELIEF SLEEP MUSIC || Deep Healing Music based on Solfeggio Frequencies
 - KsMqhVfUC9w # 417 Hz Healing music - Let go of mental blockages, Remove negative energy, Ancient Frequency music
 - As-oVm6NDX0 # Sarah &amp; Amelia Brightman   &quot;Moment Of Peace&quot; feat. Gregorian
