--- a/ytube/_data/lists/music-keys.yml
+++ b/ytube/_data/lists/music-keys.yml
@@ -1,4 +1,7 @@
 --- 
+- Pfm8M3q-4TY # Cozy Coffee Shop Ambience with Relaxing Jazz Music and Rain Sounds, Rainy Night & Smooth Jazz Music
+- MPFTY-b4WYE # Deep Feelings Mix | Deep House, Vocal House, Nu Disco, Chillout #62
+- oVkRJDpBh3I # Art of Melodic Techno & House 24/7 Live Radio | Best Relax House, Chillout, Study by Trippy Code
 - aKJvbTEnp0I # LIGHT IN BABYLON - Hinech Yafa - Istanbul
 - HV4YGZ4MWdY # Morven Brown - Back To Black
 - _7wKjTf_RlI # Max Cooper - Order From Chaos (official video by Maxime Causeret)
@@ -13,8 +16,12 @@
 - Ty9-E8_rmBw # Sia - Unstoppable (Wallmers & Geonis Remix)
 - tNpXNQ65gsA # Jacques Brel - Une valse a mille temps (with lyrics for karaoke)
 - Vkhi_hDD6ys # ENIGMA Of His Eyes The Peace (New Song 2018) Shinnobu
+- IKKbboquS9s # Katy Perry - Not the End of the World
+- hineGNZfXRw # Cafe De Anatolia - Best Ethnic Deep House (Mix by Billy Esteban)
 - 2HaBSZL-F58 # Drivin&#39; N&#39; Cryin&#39; – Fly Me Courageous
+- Cp4Rxh1ZqzA # Deep Feelings Mix | Deep House, Vocal House, Nu Disco, Chillout #23
 - KdS6HFQ_LUc # Rihanna - S&amp;M
+- J5FlI3ndrKw # Classical Morning - Relaxing, Uplifting Classical Music
 - f0-fPwuPpAk # Khooneye Ma - Marjan Farsad
 - mBNm4W3LRw4 # خونه ی ما - مرجان فرسادMarjan Farsad - Our Home (Translated Lyrics)
 - GsFZh0riB20 # Eric Prydz — Opus (Tomorrowland Orchestra Version)
@@ -28,11 +35,11 @@
 - XqAiGeEzctQ # Angèle - Oui ou Non [CLIP OFFICIEL]
 - HzjE33U_gy8 # Guadalupe Pineda  - Historia De Un Amor
 - YHc-c9hJMrU # KOBRA AND THE LOTUS - You Don&#39;t Know (Official Video) | Napalm Records
+- 7FdDLvED_4E # Lola Astanova - Fantaisie Impromptu (OFFICIAL VIDEO)
 - Ubi1m5pR3hM # DELAIN - Stardust (Official Video) | Napalm Records
 - FgrwgGIdoOo # London Grammar - Oh Woman (Official Video)
 - ysBF0cBAmrk # un pére chimene badi
 - NrIL-0AtDY4 # Hans Zimmer_ Now we are free /The Horse Whisperer/ fanmade
-- ''
 - hpFZWeQq_EU # Classical music remix electro instrumental 2015
 - VRqZ6AuegXs # Hello by Adele - Cover by Lettice Rowbotham
 - UIaowTxoUTc # Nolwenn Leroy - Sixième Continent
