--- a/ytube/_data/lists/robots-keys.yml
+++ b/ytube/_data/lists/robots-keys.yml
@@ -1,5 +1,7 @@
 --- 
 - b2l6Q48vBM0 # Automatic barrier using Thymio
+- RBLnAhzPpTQ # Autonomous farm work - enter the robots
+- aajbFO7xwBM # Why SpaceX Bought a Robotic Dog
 - G30HGR7AVHY # 5 Smallest And Cheapest SuperComputers You Have Ever Seen
 - GHc63Xgc0-8 # Obsolete By 2030 - Humans Need Not Apply!
 - -Xn6IDytVGw # National Geographic Documentary: Year Million (Artificial Intelligence)
@@ -10,9 +12,13 @@
 - ZfVtZ7BdEag # Dance with Thymio II
 - q6vtNPp2P94
 - 0eQm3cgwGrc
+- zrzCYgNnHfI 
+- mT3vfSQePcs # Amazing Bike Riding Robot! Can Cycle, Balance, Steer, and Correct Itself. #DigInfo
 - cdx0oYLXT70 # Le robot Thymio pour illustrer la balance romaine
+- MEhJzbhxm8A # Petoi Bittle, now available on Indiegogo - a Realistic Palm-sized Robot Dog for STEM and Fun
 - IxuU5L2MEII # ai.bythebay.io: George Hotz, Self-Driving Lessons from Comma AI
 - FBl4Y55V2Z4 # Inside Alibaba&#39;s smart warehouse staffed by robots
+- 1yvoZhRTX-U # This is Ascento 2
 - 9Ix0o2iEcww #
 - N4I2If3x_9g # Robin Hanson: "The Age of Em: Work, Love and Life when Robots Rule the Earth" | Talks at Google
 - CjsDtXYh3k4 # FEMINIST LESBIAN LIVES AS A MAN FOR 18 MONTHS- EYE OPENING ACCURATE
@@ -36,7 +42,9 @@
 - f-RFPT70tK0 # A Life Changed by Robotic Legs
 - 8wHJjLMnikU # Real-Life Robots
 - XeEYaX82jSE # The World In 2050 [The Real Future Of Earth] – Full BBC Documentary 2018
+- vjSohj-Iclc # Getting some air, Atlas?
 - 01ofjPtBlk4 # In 5 Years Robots Will Take Your Job! What Then?
 - Zy5dmo6ngz0 # JAPAN RELEASES FULLY FUNCTIONING FEMALE ROBOTS 4
 - R_5sAburz5Q # Why AI Is The Most Dangerous Thing You Can Imagine
 - sZ_-yb-TN9M # 10 Amazing Robots That Really Exist
+- xMMauLmHcwk # New Generation of Swarm 3D Printing Robots
