--- a/ytube/_data/lists/seen-keys.yml
+++ b/ytube/_data/lists/seen-keys.yml
@@ -1,6 +1,7 @@
 --- 
 - X3qSHcbSnLU # Bitcoin and blockchain: global development game changers?
 - 54gwAHagA2U # 99 CHOSES QUI N’ARRIVENT QU’EN ALLEMAGNE | Lama Faché
+- RgkghUvC6PA # 6 Psychological Tricks To Command Respect Instantly
 - rf9qK9QTlq0 # Tiwanaku / Pumapunku Megaliths are Artificial Geopolymers
 - UUDJoHeJbzw # Obviously I need another channel update
 - nuRuFj5c0bE # Why you are wrong about Universal Basic Income | The power of AI within the hands of the few
