--- a/ytube/_data/lists/spiritual-keys.yml
+++ b/ytube/_data/lists/spiritual-keys.yml
@@ -1,4 +1,5 @@
 --- 
+- 4eC_ArZrwkc # One Asana Can Change Your Life
 - TM6WKeZ43s4 # This Trick Makes You Immune To Illness | Wim Hof on Impact Theory
 - y4Dz1zFEy4E # The most realistic brain visualization ever made. Visualisation du cerveau
 - zzvp6l9JvHg # Sadhguru on Jiddu Krishnamurti & His Life
