--- a/ytube/_data/lists/tango-experimental-keys.yml
+++ b/ytube/_data/lists/tango-experimental-keys.yml
@@ -1,4 +1,8 @@
 --- 
+- rAOh0hNckUo&list=RDCLAK5uy_n9hGvSNdO2TpX8jJuiThvnfrfIi1qNRnY&start_radio=1
+- g8_hNOo7mbA # Constantinos ILIOPOULOS - Tango Nuevo
+- M_kTSBqQkME # Kovacs - My Love
+- -UhlBqlKISU # Louane - Donne-moi ton coeur
 - C4cmJ7QqBMI # Bebe - Siempre Me Quedara
 - IIYAMOb22WE # Kida - Malli
 - DC7sHxzRQAA # London Grammar - Non Believer (Official Video)
@@ -12,7 +16,10 @@
 - 9kVs7iX9eik # Zaz - On s’en remet jamais (Lyrics video)
 - 8ui9umU0C2g # Manchester Orchestra - The Silence
 - kHLHSlExFis # Ariana Grande - God is a woman (Official Video)
+- vs61OHs2g-w # Dua Lipa, Angèle - Fever (Official Music Video)
+- YNSiEB8qFyk # 'Pendant 24h' Grand Corps Malade et Suzane
 - ntC7c60uqqY
+- RUpDslHSLbU # The Devil’s Daughters w/ Danny B Harvey - Rock Boppin’ Baby
 - mmA5fekq8yQ
 - lfkgOWrd1vc # LP - When We're High [Official Video]
 - 1mB0tP1I-14 # Lady Gaga - LoveGame (Official Music Video)
