--- a/ytube/_data/lists/work-music-keys.yml
+++ b/ytube/_data/lists/work-music-keys.yml
@@ -2,7 +2,10 @@
 - Ku1HJ2DI7Xk # DEAD CAN DANCE - PERSEPHONE
 - 4ifTjdKrTPw # Within Temptation - Angels
 - X8emPcVRhuc # Hans Zimmer - Time - Live in Prague
+- C4MpzSMkinw # Productivity Music — Maximum Efficiency for Creators, Programmers, Designers
 - wAR4MYVcD2M # Relaxing Piano Music, Music for Stress Relief, Relaxing Music, Meditation Music, Soft Music, ☯2885
+- PNhQakLdI9o # Best Music Of Hacking Your Mind_v.02 (90 minutes of reading, learning, studying, programming)
+- dDI8jLlc5WE # Programming ▫️ Designing ▫️ Coding ▫️ Music
 - KOmXpZumkxM # STIVE MORGAN -  Ice And Fire (Music Video)
 - kuvST3wGCG8 # Blackbriar - Until Eternity (Official Music Video)
 - TX_1O-CDirY # Kaleo - Way Down We Go
@@ -10,6 +13,8 @@
 - xMMSBS0qwPk # I Lost My Love In The Wind - Tina Guo
 - OoebaJlZhtw # Rihanna feat Iggy Azalea - BAD GIRL (Video Reaction) BY Rafa Noriegui
 - WUsQbri9yaI # HAVASI — The Road (Official Music Video)
+- yPGK1-6m_j4 # Ambient Study Music To Concentrate - 3 Hours of Study Music for Better Concentration
+- kGkZNy-aWAQ # MEMORIES FORGOTTEN | Best Epic Music of 2019 | Most Epic Victorian/Steampunk Music Mix
 - H8-lWIDT19k # Schreiben Essays, Dissertationen und beruhigende Lichtmusiksuche
 - 5VzprYCxPBQ # Hallelujah- Lindsey Stirling- #aSaviorIsBorn
 - f5howHv3F54 # Paramore: Careful [OFFICIAL VIDEO]
