--- a/ytube/_data/ytube.yml
+++ b/ytube/_data/ytube.yml
@@ -1,144 +1,1 @@
---- # list of MikCol Tangos
-- 2cdel3vqSeI
-- 3t4zbAX-0XA # Tango Mi Amor - Lara Fabian.wmv
-- UiHmeHZAc0s # JT Coldfire - She&#39;s Crazy
-- M0x-NWrffx0 # I Hate You For It - Chad Brownlee (HD Uncut Version)
-- NxlP2msyhYE # Trio Garufa Tango Film: Gamulan
-- _uvE32Zbi8I # Bihter Behlul tango sahnesi  [ Forbidden Love Tango ]
-- Bkf9qqnu9cE # Neo Tango - C &amp; C - California Dreaming
-- fkLUBxLMMio # Laura Pergolizzi-Too Much
-- tyYG1k0f9mE # Tarrango_Club Des Belugas_Anne Schnell_Paintings
-- PDBCg5qeSqs # Solitude _ Buddha Bar
-- cFeAwZslAHY # TANGO FIRE - Verano Portenas
-- hDWVPcwOpvA # Tanghetto - Blue Monday (videoclip)
-- -8ahuu6V78E # Club des Belugas - Tarrango *k~kat café au lait*
-- dIvpuY4XT-8 # LP - Suspicion
-- cMijaeW2iT8 # Club des Belugas Tarrango &amp; feat  Anne﻿ Schnell  ...byhull
-- Az4AeKL6seY # Eyes of the Needle - Sia (legendado) - Game Of Thrones
-- wsbH9AevlpA # Francesca Gagnon &quot;JE VOUDRAIS BIEN &quot;
-- jCg6yqQzcwY # FRANCISCO CANARO  -   ROBERTO MAIDA  -   SILUETA PORTEÑA
-- NKQ0jGqfzlU # Bandolero
-- LJlrtDRtQYI # Nu Tango - Cinco por Buenos Aires
-- 1xpkRj99FH0 # Sanvean (I am your shadow) - Lisa Gerrard
-- _-wo7IUi-sc # TangEra -  Luna del Tango
-- WPVv-Jjb0wQ # Craig Connelly &amp; Christina Novelli - Black Hole [Official Music Video]
-- ME6mhBlSmLc # Hugo Diaz - Guitarra Mia
-- HE-ZQGGr3UI # Lisa Gerrard &amp; Patrick Cassidy &quot; I asked for love &quot;
-- s7x7vOjfqD4 # John Powell - Assassin&#39;s Tango
-- Int48f_-ku4 # HINDI ZAHRA |  Beautiful Tango
-- Ql1FEP0aWaM # Tanghetto  Inmigrante.Tango Electronico
-- FRMpb1N01P4 # &quot;Roxanne&quot; - A Dance Short Film
-- lu5u17H9rtc # I FEEL YOU
-- 3f3KhR5oDC4 # Bliss - Wish You Were Here | VideoClip ᴴᴰ by yanniszita
-- Do7RUIDqRJE # Lamb - What Makes Us Human
-- 88KroShLWEg # Tango Jointz - Tango D&#39;Amor
-- ZxJrdCIejus # Bang Bang .(You Shot Me Down)Kiil Bill
-- 60ItHLz5WEA # Mix – 60Ithlz5wea
-- NvryolGa19A # Yann Tiersen - Comptine d`un autre ete - l`apres-midi
-- BchURHicdUw # Tango D&#39;Amor - Tango Jointz
-- JaAWdljhD5o # SAIL - AWOLNATION (Unofficial Video)
-- yILuW4npZWg # Sterling Angel ~ Sexuality
-- O-zCffz8KxM # Sterling Angel ~  Sacrifice (2009)
-- GBXckflFSDs # Tango Nuevo A Paris Claudia Miazzo &amp; Jean Paul Padovani
-- R63tgBhC1vU # Tango (II)
-- rztSeXyTaEU # Depeche Mode-World In My Eyes
-- owL3NjBwF70 # TangEra - Libertango
-- Vu6DRxC6pVA # Heart Tango
-- y_h1MdL11CE # Gotan Project - Una Musica Brutal
-- YOu3SMDBmy4 # Tango - Read All About It - Charlotte &amp; Cedric
-- 2a3JV5pxOEQ # Enigma - Sadeness (Remix 2017)
-- QKZVQJSDYaI # BAJOFONDO Zitarrosa
-- I14t0nrwm9w # PARIS (electrotango felino)
-- i3vsiiRK5GU # Tango Sexy dance Santa Maria HD video HQ audio
-- bM_7m4vTPng # Touch &amp; Go - Straight To Number One
-- HTEPWzYGxHw # 02 Reflejo de Luna - Alacran
-- ldGFeiWmFFw # Libertango - Trio Garufa
-- Lv8VKCz3Cdg # LP - Other People [Official Video]
-- q25HlmiuuPg # Tango electrónico &quot;Vi luz y subí&quot; de  Carlos Libedinsky
-- _qq2VWtprWo # Tango &quot;Camisa&quot; - Short Film
-- l7S1VLPEHDs # I love you | ᴴᴰ
-- KyBtc0k3rFE # Tango sensual
-- _njgfgNFng8 # Enigma - Je T&#39;aime Till My Dying Day
-- vvzLbJrOnmc # Tango-Vals &quot;Flor de Lino&quot;. María Inés Bogado &amp; Sebastián Jiménez with &quot;Solo Tango&quot; orchestra. Танго
-- K70Lh3ALWeg # Sterling Angel - Tears of Heaven
-- waU75jdUnYw # Earned It (Fifty Shades Of Grey) (From The &quot;Fifty Shades Of Grey&quot; Soundtrack) (Explicit...
-- Lhu0FF5MEg0 # Tango Chillout - La Cumparsita
-- aHjpOzsQ9YI # Crystallize - Lindsey Stirling (Dubstep Violin Original Song)
-- vr-whWr6nz8 # Tango - Billie Jean - C&amp;C
-- Ys5xfdn5rlo # Dead Can Dance - Song of the Stars (Pina version)
-- 2X16HWbr87A # Amazing Oriental Music - HD - FARAN ENSEMBLE
-- 47D9Ne5Vbj8 # Sur, Troilo/Manzi, Forbidden Tango, Camilo Ferrer  ,bandoneón, Australia 2015
-- c1_QDYh22G4 # Tango improvisation &quot; Crazy in Love - Beyoncé&quot;
-- Bhi9GU6xzDI # René Aubry - Chaloupée
-- QnHjOBxWAgc # Rihanna - Sex With Me (Explicit)
-- nJX0o_q3xeA # Do i Wanna know? Tango and gancho by Charlotte &amp; Cedric
-- 4K3jejRZIuA # Tango Nuevo - Apologize
-- o20YCzej5_s # El Choclo (Tango) - Eduardo Rojas - Piano on Fire
-- DD9Zz1LpEas # Naked Tango - a film about Tango and the Zvi Migdal - Vincent D&#39;Onofrio
-- ISsHSA1vihQ # Within Temptation - Faster (De Wereld Draait Door)
-- EuGUFkAxw88 # Andrew Rayel feat. Emma Hewitt - My Reflection (Official Music Video)
-- 8HrMB0Opsa4 # Tango Sensual - Vuelvo Al Sur
-- hwDosltYWTo # Otros Aires - Allerdings
-- dqRwxzzh7lU # sex-music-entertainment-pros-tango-love #48
-- SiXBVzeMuLQ # Tango Compás 10 Mix by Sergo
-- vyk92EHo40s # Taquito Militar - Mariano Mores
-- 8IjWHBGzsu4 # Zaz - On ira
-- 1nEnenji0PI # Trixie Whitley - &quot;Breathe you In My Dreams&quot;
-- XvUe35LM02Y # Electrotango - La Bohemia - Electro Dub Tango
-- tt2NIDtp-Ls # Rolling in the Deep - Adele (violin/cello/bass cover) - Simply Three
-- hXOlG20bO9A # http://www.youtube.com/watch?v=hXOlG20bO9A
-- pXRviuL6vMY # twenty one pilots: Stressed Out [OFFICIAL VIDEO]
-- LbA9syEV2sg # Yann Tiersen-Tango
-- uzurqBnALkw # Yann Tiersen - La Valse d&#39;Amélie [Original]
-- S5NPriAa8so # Albert Cummings - Lonely Bed
-- pYt0Nwt_oNI # Bebe - Cocaine
-- Y7A5Ca4ZX8o # Asi se baila il tango...(Veronica Verdier)Bailongo...
-- VHoT4N43jK8 # Stromae - Alors On Danse
-- EHZbeJ__1NE # Need You - Bosx1ne, JRoa, Skusta Clee, Emcee Rhenn, Flow-G, Bullet-D &amp; Kent MNL
-- uIWBgLaxq4E # Oriental Tango &quot;Desert Roses&quot; 24-06-2012
-- fAqtI9XgQi
-- EiyPRqP5glY # Transcendence Music Video - Lindsey Stirling
-- eSg9B_plTtA # GALLO CIEGO -  PUGLIESE
-- D5XhJ5cOjr0 # buddha bar-Secret love
-- GkbfKLqTDrw # Club des Belugas - Tarrango
-- dvxhTZeBj34 # Tango   Infiltrado
-- fm4Tr9Sy6pk # Bedouin Soundclash - Brutal Hearts (feat. Coeur De Pirate)
-- TWNYHiJoKXw # dancing for a cause, dancing for the children (2gether)
-- Tt16R5Vjsg8 # Sudestada Tango Lounge - Titite
-- MssqSpTZeds # In-grid  -  In -tango.
-- cxjvTXo9WWM # Sia - Unstoppable (Audio)
-- b8gqTBP7gTg # The Arena - Lindsey Stirling - Dance Movie Mix (Step Up and more)
-- 01WukohheHQ # Francesca Gagnon - Querer
-- yN66FMYEEYQ # Trio Garufa - Quiero ser tu sombra
-- oIMDjf_KX2U # 11.04.2015 - Tanda Of The Day - Juan Carlos Cáceres (Candombe)
-- OwGG5fX7bxY # Mecano - Hijo de la Luna (Videoclip)
-- rLCMBlST8yk # Azaleh &amp; Sublab - For My Soul
-- yltdjE5hE2o # Ashram - Tango Para mi Padre y Marialuna
-- cnxnXSMZpXc # Tanda of the week 17-2013: Juan D&#39;Arienzo / Alberto Echagüe (tango)
-- aE2GCa-_nyU # Radioactive - Lindsey Stirling and Pentatonix (Imagine Dragons Cover)
-- qSCF2rGy1BU # Benjamin Siksou - Fais vite
-- H_b7eMBB1c8 # 05 The Perfect Tango - Album: Perfect Tango
-- K5KAc5CoCuk # Indila - Dernière Danse (Clip Officiel)
-- dlagEN3eoAk # El Tango De Roxanne -  Dj Mari Ferrari rmx
-- BYzjGJ3fSy8 # ElectroTango DJ Mix by Sergo
-- zh0CiZ4ZGJI # The Eerie Waltz &amp; Tango Playlist - Dark Cabaret Style
-- lORuAFs6nmQ # Nuevo Tango Fusion
-- s7CWRaYgFmc # Gotan Project  - &quot;Epoca&quot; Sensual Tango
-- 0op_NvONyUI # Rene Aubry - Courant D&#39;air
-- G74c8j-qZ7w # Amadeus - Unstoppable
-- Z56yMmoH8kw # Camille - Je ne Mâche pas mes mots | Live Plus Près De Toi
-- Snj93QT82rg # Bebe - Siempre Me Quedara (translated)
-- HQL_xoabzr0 # Sia ft.  Rihanna - Beautiful People (official video)
-- 1h8cpRYmuGM # Imany •♥• You Will Never Know •♥• Ти Никога Няма Да Узнаеш (｡◕‿◕｡) Lyrics
-- xfgl57vINmw # Dead Can Dance - Sanvean ( I Am Your Shadow )
-- 5t5QSiydF9Y # Lamb - Wise Enough
-- 4VQwQzoGF_o # La Valse des Monstres - Yann Tiersen [Original]
-- AU_PuF59E5g # Modern Noir Songs
-- WuxCOhtAcVc # R.E.M. - Losing My Religion (Lutzu Istrate Remix) DCM
-- x7qcU3HUw8o # Tango nuevo style - Tango electronico - emotango
-- 67Y2qD_rtJ8 # Una Noche Más - Yasmin Levy - Spanish &amp; Persian Lyrics
-- 8L2X15ph2To # Remo Anzovino - Amante
-- DRarsWWGnXM # LUVIENNE Popcorn remix (dubstep violin)
-- x5SHpHDRtOc # Fifty Shades of Tango - The Weeknd Earned It - Argentine Tango Julia Juliati &amp; Ronny Dutra
-- R9cqYY19-6w # In the Mood for Love Soundtrack - YouTube
-- uJxs5SkSe7s # TANGUERA-Sexteto Mayor
+--- # ytube playlists ...
