--- a/ytube/_data/lists/news-keys.yml
+++ b/ytube/_data/lists/news-keys.yml
@@ -1,3 +1,4 @@
 --- 
 - 54IY39Mxqfc # Breaking Alert - Hawaii&#39;s Kilauea Volcano Turns Mordor With Lava Speed Exceeding 17 Miles Per Hour
 - a-M_5rGhPdg # FRANCE 24 en Direct – Info et actualités internationales en continu 24h/24
+- hKUOkiKHD8U # Elon Musk Most Shocking 2021 Predictions - And Tesla Share Price Prediction
