--- a/ytube/_data/lists/tango-workshop-keys.yml
+++ b/ytube/_data/lists/tango-workshop-keys.yml
@@ -13,3 +13,7 @@
 - bLZuK-O7M3s # Mundial de Tango 2016, Semif Escenario 11 Campeones de Cali, Colombia y Mendoza Argentina
 - "-7S0Rnvb24Y" # Tango "El huracan". Julian Sanchez and Melina Mourino. Танго. Хулиан Санчес и Мелина Моуриньо
 - B0jAvZJEm6I # "VUELVO AL SUR" - Im Scheinwerferlicht / Con toda Iluminacio / Under Spotlight
+- JwJMtv3ajKo # Workshop Tango Nuevo 2 - 23. 24. September 2017
+- VaJrHZ_pVN8 # Cedric & Charlotte's moves
+- A-RxGrUB2G4 # NeoTango Charlotte & Cédric - This One For You
+- JaEsttvrXkY # Gianpiero Galdi & Lorena Tarantino - Krakus Aires Tango Festival 2019 4/5
