added birds songs

--- a/ytube/_data/lists/ilike-keys.yml
+++ b/ytube/_data/lists/ilike-keys.yml
@@ -4,4 +4,6 @@
 - Bf_YemfEaDs # Soft Piano With Water Sounds for Stress Relief - Calm Music for Meditation, Beautiful Relaxing Music
 - YbIt_UISoD8 # Mindfulness Meditation - 30 minutes (Yongey Mingyur Rinpoche recording - edited)
 - 5GSeWdjyr1c # A Guided Meditation on the Body, Space, and Awareness with Yongey Mingyur Rinpoche
+- VeIhRdR2jsU # 3 Hour bird sounds Relaxation - Nature sounds music for Meditation - Birds chirping, birds singing
+- CppmXLEWzEs # Songbirds 11 Hours -Sounds of Nature 26 of 59 - Pure Nature Sounds
 
