diff --git a/ytube/_data/lists/geek-keys.yml b/ytube/_data/lists/geek-keys.yml index fd346bc..e6984ba 100644 --- a/ytube/_data/lists/geek-keys.yml +++ b/ytube/_data/lists/geek-keys.yml @@ -173,0 +174 @@ +- rXCHn9B5dH0 # The Machine That Erases What It Creates diff --git a/ytube/_data/lists/techno-keys.yml b/ytube/_data/lists/techno-keys.yml index c514ca6..0edf06e 100644 --- a/ytube/_data/lists/techno-keys.yml +++ b/ytube/_data/lists/techno-keys.yml @@ -20,0 +21 @@ +- PMma3OJUHhs # A Permanent Magnet That Turns On and Off diff --git a/ytube/publish.sh b/ytube/publish.sh index 0ea66e7..ef7bedd 100644 --- a/ytube/publish.sh +++ b/ytube/publish.sh @@ -25 +25,3 @@ git add _data/ipfs.yml -git commit -a +msg="$(git diff --minimal -U0)" +git commit -a -m "$msg on $(date +%D)" +git push github on 01/14/21

--- a/ytube/_data/lists/all-videos-keys.yml
+++ b/ytube/_data/lists/all-videos-keys.yml
@@ -12887,3 +12887,20 @@
 
 
 
+
+- rXCHn9B5dH0 # The Machine That Erases What It Creates
+
+
+
+
+
+
+
+
+
+
+
+- PMma3OJUHhs # A Permanent Magnet That Turns On and Off
+
+
+
