--- a/ytube/_data/lists/geek-keys.yml
+++ b/ytube/_data/lists/geek-keys.yml
@@ -171,4 +171,5 @@
 - OHWtp0CRn14 # The Blockchain and Us: Steve Wilson on &quot;Next generation blockchain&quot;
 - mnQrWtBnDaA # 7 How to set up your own private Ethereum Blockchain browser
 - skS4Beik4Fc
+- rXCHn9B5dH0 # The Machine That Erases What It Creates
 - fzI9FNjXQ0o # GitHub Arctic Code Vault
