--- a/ytube/_data/lists/techno-keys.yml
+++ b/ytube/_data/lists/techno-keys.yml
@@ -18,6 +18,7 @@
 - knrHPneSN10 # Nuclear Fusion Energy: The Race to Create a Star on Earth
 - 1BXYSGepx7Q # What you need to know about CRISPR | Ellen Jorgensen
 - vO-1l0lXR_U # Hutchison demonstrates Zero Point Energy
+- PMma3OJUHhs # A Permanent Magnet That Turns On and Off
 - 4t6InWhWx6O # 
 - JbQeABIoO6A # Next Future Terrifying Technology Will Blow Your Mind
 - qIRjytgNuhM # LG&#39;s Future Display Technology Will Blow You Away
