--- a/ytube/_data/lists/medit-keys.yml
+++ b/ytube/_data/lists/medit-keys.yml
@@ -3,6 +3,7 @@
 - 5GSeWdjyr1c # A Guided Meditation on the Body, Space, and Awareness with Yongey Mingyur Rinpoche
 - 0GuCDLdrvkA # Durgaashtakam - Peaceful Music For Protection, Healing, Relaxation and Meditation
 - XplRXNxPLEY # Alan Watts - Tap Into Your True Self | 432hz | Frequency Meditation
+- x6UITRjhijI # Tibetan Healing Sounds: Cleans the Aura and Space. Removes all n
 - ausD8Z422as # Dhafer Youssef - Khira "Indicium Divinum" (Elegy for my mother)
 - 8sYK7lm3UKg # OM Chanting @417 Hz | Removes All Negative Blocks
 - 0sbRipuelcc # 
