diff --git a/ytube/_data/lists/all-music-keys.yml b/ytube/_data/lists/all-music-keys.yml index d290335..03fce20 100644 --- a/ytube/_data/lists/all-music-keys.yml +++ b/ytube/_data/lists/all-music-keys.yml @@ -24,0 +25 @@ +- ovIeZs0JpIw # Sleep Music 24/7, Relaxing Music, Deep Sleep Music, Spa, Sleep Meditation, Healing Music, Zen, Yoga diff --git a/ytube/_data/lists/classical-keys.yml b/ytube/_data/lists/classical-keys.yml index ef1f71c..c09dddd 100644 --- a/ytube/_data/lists/classical-keys.yml +++ b/ytube/_data/lists/classical-keys.yml @@ -1,0 +2 @@ +- Bf_YemfEaDs # Soft Piano With Water Sounds for Stress Relief - Calm Music for Meditation, Beautiful Relaxing Music on 01/15/21

--- a/ytube/_data/lists/all-videos-keys.yml
+++ b/ytube/_data/lists/all-videos-keys.yml
@@ -149,6 +149,7 @@
 - 7FjFWtkxwfI # Schamanische Meditationsmusik, Entspannende Musik, Beruhigende Musik, Stressabbaumusik, ☯2234
 - R2snt2oEKA0 # ROOT CHAKRA Healing Meditation Music | Let Go Fear - Worries - Anxiety | HEAL THYSELF {Muladhara}
 - wnusFbC0E80 # 10 Minute Morning Meditation for Gratitude and Positivity to Start your Day
+- ovIeZs0JpIw # Sleep Music 24/7, Relaxing Music, Deep Sleep Music, Spa, Sleep Meditation, Healing Music, Zen, Yoga
 - wPg3x4Bg8IA # Beautiful Koshi Bells Meditation - Wind Chimes Relaxation Sleep Music 🎧 | Calm
 - aHpJQJ4gPOg # 528 Hz Heart Chakra Balance ➤ Emotional Stability | Aura Cleansing, Inner Peace, Mood Enhancement
 - DxMzvUtN3Gc # Extremely Powerful | HEART CHAKRA OPENING VIBRATIONS | (1 Hour Version)
@@ -12913,6 +12914,21 @@
 
 
 - x6UITRjhijI # Tibetan Healing Sounds: Cleans the Aura and Space. Removes all n
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
